--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.0.3",
     "@mui/material": "^5.15.17",
+    "chart.js": "^4.4.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "faker": "^6.6.6",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-modal-video": "^2.0.1"
