--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.3",
     "@mui/material": "^5.15.17",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
