--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.0.3",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "eslint": "^8.56.0",
@@ -26,7 +27,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
-    "react-modal-video": "^2.0.1"
+    "react-modal-video": "^2.0.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
