--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.0.3",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-charts": "^7.5.1",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
