--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/x-charts": "^7.5.1",
+    "@mui/x-data-grid": "^6.20.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
@@ -29,7 +30,8 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-modal-video": "^2.0.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
